<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoOverlay="false"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="@dimen/card_elevation">

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/sliding_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <FrameLayout
            android:id="@+id/player_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <fragment
            android:id="@+id/mini_player_fragment"
            class="com.poupa.vinylmusicplayer.ui.fragments.player.MiniPlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mini_player_height" />

    </FrameLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>