...
    <string name="label_playing_queue">Playing queue</string>
    <string name="no_results">No results</string>
    <string name="updating">Updating…</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="playlist_exists">Playlist %1$s already exists.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
...
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="save_playlist_title">Save as file</string>
    <string name="save_playlists_title">Save as files</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="select_all_title">Select all</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
...
    <string name="app_widget_classic_name">Phonograph - Classic</string>
    <string name="app_widget_small_name">Phonograph - Small</string>
    <string name="app_widget_card_name">Phonograph - Card</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="bug_report_issue">Issue</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="device_info">Device info</string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
...
