...
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="2dp">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?rect_selector">

        <LinearLayout
            android:layout_width="match_parent"
...
